--- a/public/css/login.css
+++ b/public/css/login.css
@@ -49,6 +49,8 @@
   padding: 8px;
   width: 100px;
   border: 2px solid #4d9900;
+  display: block;
+  background-color: transparent;
 }
 
 .btn:hover {
@@ -78,3 +80,4 @@
     color: #fff;
     outline-style: none;
 }
+
