--- a/public/css/category.css
+++ b/public/css/category.css
@@ -6,7 +6,6 @@
     margin: 0 auto;
     max-width: 1440px;
     height: 600px;
-    background-color: #fff;
     position: relative;
 }
 .form-container {
@@ -17,6 +16,7 @@
 
 h3 {
     text-align: center;
+    color: #fff;
 }
 
 .section-form {
@@ -27,6 +27,7 @@ h3 {
 .section-form label {
     padding: 5px 0;
     font-size: 15px;
+    color: #fff;
 }
 
 .section-form input {
