--- a/public/css/category.css
+++ b/public/css/category.css
@@ -5,7 +5,7 @@
     justify-content: center;
     margin: 0 auto;
     max-width: 1440px;
-    height: 600px;
+    min-height: 60vh;
     position: relative;
 }
 .form-container {
@@ -52,7 +52,7 @@ h3 {
     width: 100px;
     padding: 6px 0;
     background-color: #fff;
-    font-size: 15px; 
+    font-size: 15px;
 }
 
 .btn-quit {
