--- a/public/css/adminnav.css
+++ b/public/css/adminnav.css
@@ -1,6 +1,6 @@
 
 body {
-    background-color: #333333;
+    background-color: #1a1a1a;
     font-family: 'Titillium Web', sans-serif;
     margin: 0;
 }
@@ -81,7 +81,7 @@ body {
     flex-direction: row;
     justify-content: center;
     max-width: 1440px;
-    background-color: #2d5986;
+    background-color: rgba(230,77,0,1);;
     margin: 0 auto;
     border-radius: 24px;
 
@@ -113,7 +113,7 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    background: #333333;
+    background: #1a1a1a;
     transform: scaleY(0);
     transform-origin: 50% 0;
     transition-property: transform;
@@ -129,6 +129,6 @@ body {
   }
 
   .current {
-    background-color: #333333;
+    background-color: #1a1a1a;
   }
   
