--- a/public/css/category.css
+++ b/public/css/category.css
@@ -9,9 +9,9 @@
     position: relative;
 }
 .form-container {
-    border:3px solid #2d5986;
+    border:3px solid rgba(230,77,0,0.6);;
     padding: 90px 70px;
-    box-shadow: -1px 4px 52px -5px rgba(0,0,0,0.7);
+    box-shadow: 0px 0px 30px 5px rgba(230,77,0,1);
 }
 
 h3 {
