--- a/public/css/category.css
+++ b/public/css/category.css
@@ -78,3 +78,58 @@ h3 {
     color: #fff;
     font-weight: 600;
 }
+
+
+.category-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 70px auto;
+    max-width: 1440px;
+    position: relative;
+}
+
+.category-list-form {
+    border:3px solid #2d5986;
+    padding: 50px 70px;
+    box-shadow: -1px 4px 52px -5px rgba(0,0,0,0.7);
+    width: 800px;
+}
+
+.category-list-form ul {
+    list-style: none;
+    padding: 0;
+}
+
+.category-list-form ul li {
+    padding: 10px 0;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid rgba(230,77,0,1);;
+    background-color:#4d4d4d;
+    margin: 15px 0;
+    color: #fff;  
+}
+
+.category-list-form a {
+    color: #fff;
+    text-decoration: none;
+}
+
+h1 {
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: lighter;
+    text-align: center;
+}
+
+.list-buttons *{
+    margin: 0 15px;
+}
+
+.category-list-form ul li span {
+    margin: 0 15px;
+    text-transform: capitalize;
+
+}
