--- a/public/css/category.css
+++ b/public/css/category.css
@@ -97,14 +97,14 @@ h3 {
 
 .category-list-form ul {
     list-style: none;
-    padding: 0;
+    padding: 15px 0;
 }
 
 .category-list-form ul li {
     padding: 10px 0;
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid rgba(230,77,0,1);;
+    border-bottom: 1px solid rgba(230,77,0,1);
     background-color:#4d4d4d;
     margin: 15px 0;
     color: #fff;
@@ -129,5 +129,20 @@ h1 {
 .category-list-form ul li span {
     margin: 0 15px;
     text-transform: capitalize;
+}
 
+.new-category-btn {
+  padding: 9px 20px;
+  color: #fff;
+  background-color: black;
+  border: 2px solid rgba(230,77,0,1);
+  border-radius: 24px;
+  outline: none;
+  font-size: 17px;
+}
+
+.new-category-btn:hover {
+  color: black;
+  background-color: rgba(230,77,0,1);
+  transition: color, background-color 0.5s;
 }
