--- a/public/css/popup_warning.css
+++ b/public/css/popup_warning.css
@@ -1,10 +1,29 @@
-.popup-warning {
+.popup-main-div {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   display: none;
+  background-color: rgba(13, 13, 13, 0.6);
+}
+
+.popup-warning {
   color: #fff;
   background-color: black;
-  margin: 50px;
-  padding: 40px;
   border-radius: 20px;
+  max-width: 400px;
+  width: 100%;
+  max-height: 400px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.75);
 }
 
 .popup-btns {
@@ -14,6 +33,7 @@
 
 .popup-btns *{
   padding: 0 20px;
+  margin: 0 10px;
 }
 
 .popup-btns a {
@@ -22,7 +42,40 @@
   border: 2px solid #006600;
   border-radius: 24px;
   padding: 5px 13px;
+  transform: perspective(1px) translateZ(0);
+  position: relative;
+  transition-property: color;
+  transition-duration: 0.3s;
+  font-size: 17px;
 }
+
+.popup-btns a:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-radius: 19px;
+  background: #006600;
+  transform: scaleY(0);
+  transform-origin: 50%;
+  transition-property: transform;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-out;
+}
+.popup-btns a:hover,
+.popup-btns a:focus,
+.popup-btns a:active {
+  color: #fff;
+}
+.popup-btns a:hover:before,
+.popup-btns a:focus:before,
+.popup-btns a:active:before {
+  transform: scaleY(1);
+}
+
 
 .btn-delete {
   background-color: black;
@@ -32,4 +85,36 @@
   padding: 5px 22px;
   font-size: 16px;
   outline: none;
+  transform: perspective(1px) translateZ(0);
+  position: relative;
+  transition-property: color;
+  transition-duration: 0.3s;
+  font-size: 17px;
+}
+
+.btn-delete:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-radius: 19px;
+  background: #cc0000;
+  transform: scaleY(0);
+  transform-origin: 50%;
+  transition-property: transform;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-out;
+}
+.btn-delete:hover,
+.btn-delete:focus,
+.btn-delete:active {
+  color: #fff;
+}
+.btn-delete:hover:before,
+.btn-delete:focus:before,
+.btn-delete:active:before {
+  transform: scaleY(1);
 }
