--- a/public/css/category.css
+++ b/public/css/category.css
@@ -24,10 +24,10 @@ h3 {
 }
 
 .section-form label {
-    padding: 5px 0;
+    padding: 5px 11px;
     font-size: 15px;
     color: #fff;
-} 
+}
 
 .section-form input {
     width: 267px;
@@ -95,6 +95,7 @@ h3 {
     box-shadow: -1px 4px 52px -5px rgba(0,0,0,0.7);
     width: 800px;
     position: relative;
+    margin: 50px auto;
 }
 
 .category-list-form ul {
@@ -106,7 +107,7 @@ h3 {
     padding: 10px 0;
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid rgba(230,77,0,1);
+    border-bottom: 1px solid #ffcc00;
     background-color:#4d4d4d;
     margin: 15px 0;
     color: #fff;
@@ -161,10 +162,10 @@ h1 {
 }
 
 .new-category-btn {
-  padding: 9px 20px;
+  padding: 13px 20px;
   color: #fff;
-  border: 2px solid  #e6e600;
-  border-radius: 24px;
+  border: 2px solid  #ffcc00;
+  border-radius: 45%;
   outline: none;
   transform: perspective(1px) translateZ(0);
   position: relative;
@@ -182,7 +183,7 @@ h1 {
   left: 0;
   right: 0;
   border-radius: 19px;
-  background: #e6e600;
+  background: #ffcc00;
   transform: scaleY(0);
   transform-origin: 50%;
   transition-property: transform;
@@ -279,4 +280,85 @@ h1 {
 
 .show-msg {
     visibility: visible !important;
+    opacity: 1 !important;
+    transition: all 0.5s;
+}
+
+.new-category-btn span {
+    position: absolute;
+    top: -13px;
+    right: -165px;
+    background-color: #fff;
+    padding: 5px 10px;
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+    color: #000;
+    opacity: 0;
+    visibility: hidden;
+    width: 140px;
+    text-align: center;
+}
+
+.form-sect {
+  display: flex;
+  justify-content: center;
+}
+
+.btn-back {
+    background-color: transparent;
+    color: #fff;
+    text-decoration: none;
+    border: 1px solid red;
+    border-radius: 9px;
+    padding: 3px 27px;
+}
+
+.btn-back:hover {
+  background-color: red;
+  font-weight: bold;
+}
+
+.image-buttons *{
+  margin: 30px 10px;
+}
+
+.image-buttons {
+  display: flex;
+  justify-content: center;
+}
+
+.choose-file {
+  position: relative;
+}
+
+.choose-file button {
+  margin:0;
+  position: absolute;
+  top: 0;
+  border-top-right-radius: 24px;
+  border-bottom-right-radius: 24px;
+  width: 100px;
+  right: 0;
+  border:none;
+  outline: none;
+  height: 100%;
+}
+
+.choose-file span {
+  padding: 0px 10px;
+}
+
+.choose-file div {
+  height: 35px;
+  display: flex;
+  border-radius: 24px;
+  align-items: center;
+  min-width: 300px;
+  width: 100%;
+  background-color: #fff;
+}
+
+.choose-file input{
+    opacity: 0;
+    position: absolute;
+    height: 100%;
 }
