--- a/public/css/category.css
+++ b/public/css/category.css
@@ -100,7 +100,9 @@ h3 {
 
 .category-list-form ul {
     list-style: none;
-    padding: 15px 0;
+    padding: 0px;
+    margin-bottom: 50px;
+    width: 100%;
 }
 
 .category-list-form ul li {
@@ -362,3 +364,59 @@ h1 {
     position: absolute;
     height: 100%;
 }
+
+ .list-title h3 {
+    margin: 0;
+    text-align: left;
+ }
+
+ .list-title div {
+   position: relative;
+ }
+
+ .list-title {
+   display: flex;
+   flex-direction: column;
+   align-items: flex-start;
+ }
+
+.span-count {
+   position: absolute !important;
+   top: -15px;
+   right: -33px;
+   color: #000;
+   border-radius: 50%;
+   border: 1px solid #ffcc00;
+   min-width: 25px;
+   min-height: 25px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   background-color: #ffcc00;
+}
+
+.span-count span {
+  padding: 2px;
+}
+
+.detail-btns {
+  display: flex;
+  justify-content: space-between;
+}
+
+.detail-btns button {
+  background-color: transparent;
+  border: none;
+  font-size: 30px;
+  color: #fff;
+}
+
+.detail-btns button:hover {
+  font-size: 31px;
+  transition: all 0.3s;
+}
+
+
+
+
+
