--- a/public/css/category.css
+++ b/public/css/category.css
@@ -93,9 +93,10 @@ h3 {
 .category-list-form {
     padding: 50px 70px;
     box-shadow: -1px 4px 52px -5px rgba(0,0,0,0.7);
-    width: 800px;
+    max-width: 1200px;
     position: relative;
     margin: 50px auto;
+    width: 100%;
 }
 
 .category-list-form ul {
@@ -106,7 +107,7 @@ h3 {
 }
 
 .category-list-form ul li {
-    padding: 10px 0;
+    padding: 10px 15px;
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid #ffcc00;
@@ -401,7 +402,7 @@ h1 {
 
 .detail-btns {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .detail-btns button {
@@ -414,6 +415,38 @@ h1 {
 .detail-btns button:hover {
   font-size: 31px;
   transition: all 0.3s;
+}
+
+.image-list-cont {
+  display: flex;
+  margin-top: 60px;
+}
+
+.img-cont img:first-of-type {
+  width: 400px;
+  height: 400px;
+}
+
+.pro-subcat {
+  width: 100%;
+  margin: 0 40px;
+}
+
+.img-cont {
+  max-width: 400px;
+}
+
+.img-cont img {
+  width: 80px;
+  height: 80px;
+  margin: 5px 8px;
+}
+
+.products a,
+.sub-categories a {
+  padding: 3px 16px;
+  border-radius: 24px;
+  background-color: #000;
 }
 
 
