--- a/public/css/success.css
+++ b/public/css/success.css
@@ -1,6 +1,10 @@
 .success-p p {
-  color: #e6e600;
+  color: #000;
   font-size: 20px;
+  border: 1px solid #fff;
+  padding: 3px 30px;
+  background-color: #fff;
+  border-radius: 24px;
 }
 
 .success-p {
