--- a/public/css/category.css
+++ b/public/css/category.css
@@ -423,8 +423,8 @@ h1 {
 }
 
 .img-cont img:first-of-type {
-  width: 400px;
-  height: 400px;
+  width: 100%;
+  height: 100%;
 }
 
 .pro-subcat {
@@ -433,7 +433,9 @@ h1 {
 }
 
 .img-cont {
+  height: 400px;
   max-width: 400px;
+  width: 100%;
 }
 
 .img-cont img {
@@ -473,6 +475,14 @@ h1 {
 .icon-plus {
   margin-bottom: 40px;
 }
+
+
+
+
+
+
+
+
 
 
 
