--- a/public/css/category.css
+++ b/public/css/category.css
@@ -476,14 +476,121 @@ h1 {
   margin-bottom: 40px;
 }
 
+.kolone {
+  display: flex;
+  align-items: center;
+  margin-bottom: 35px;
+}
 
+.kolone a {
+  position: relative;
+  height: 30px;
+  width: 30px;
+  margin: 0px 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 24px;
+  border: 1px solid;
+}
 
+.kolone a:hover {
+  background-color: #fff;
+}
 
+.kolone a:hover i {
+  color: #000;
+}
 
+.kolone p {
+  font-weight: bold;
+  color: #fff;
+  font-size: 20px;
+}
 
+.kolone span {
+  position: absolute;
+  top: 0px;
+  left: 100%;
+}
 
+.add-kolona-div {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(64, 64, 64,0.8);
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  display: none;
+}
 
+.add-kolona {
+  width: 500px;
+  height: 600px;
+  background-color:#1a1a1a;
+  box-shadow: -1px 4px 52px -5px rgba(0,0,0,0.7);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
 
+.show-add-kolona {
+  display: flex;
+}
 
+.kolona-select {
+  height: 300px;
+}
 
+.kolona-select option {
+  margin: 5px 35px;
+}
 
+.kol {
+  width: 100%;
+}
+
+.kol a {
+  text-align: center;
+}
+
+.kolona-0,
+.kolona-1,
+.kolona-2,
+.kolona-3,
+.kolona-4,
+.kolona-5,
+.kolona-6,
+.kolona-7,
+.kolona-8,
+.kolona-9,
+.kolona-10 {
+  
+  padding: 0px 10px;
+  margin: 0px 10px;
+  border-radius: 50%;
+}
+
+.kolona-0 {
+  background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+}
+
+.kolona-1 {
+  background: rgb(189,184,16);
+background: linear-gradient(90deg, rgba(189,184,16,1) 0%, rgba(9,121,26,1) 36%, rgba(0,255,55,1) 100%);
+}
+
+.kolona-2 {
+  background: rgb(189,184,16);
+background: linear-gradient(90deg, rgba(189,184,16,1) 0%, rgba(9,121,52,1) 36%, rgba(0,255,218,1) 100%);
+}
+
+.kolona-3 {
+  background: rgb(189,16,16);
+background: linear-gradient(90deg, rgba(189,16,16,1) 0%, rgba(121,9,36,1) 36%, rgba(255,0,172,1) 100%);
+}
