--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,5 +1,54 @@
 .container {
-   
+   display: flex;
+   max-width: 1170px;
+   margin: 0 auto;
+   justify-content: space-between;
+   padding: 20px 0px;
+}
+
+body {
+    margin: 0px !important;
+}
+
+.container ul {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.container a {
+    color: #000;
+    text-decoration: none;
+}
+
+.nav-item{
+    position: relative;
+}
+
+.dropdown-menu {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    min-width: 150px;
+    background-color: aquamarine;
+    padding: 5px 0px;
+}
+
+.dropdown-menu a {
+    padding: 5px 15px;
+}
+
+.ml-auto li {
+    margin: 0 10px;
+    color: #000;
+    text-decoration: none;
+}
+
+.nav-item:hover .dropdown-menu{
+    display: flex !important;
 }
 
 .form {
