--- a/public/css/category.css
+++ b/public/css/category.css
@@ -148,13 +148,10 @@ h1 {
 }
 
 .delete {
-    background-color: #1a1a1a;
+    background-color: transparent !important;
     outline: none;
-    padding: 7px 16px;
-    border-radius: 20px;
-    border: 2px solid #cc0000;
     color: white;
-    font-size: 16px;
+    font-size: 25px;
 }
 
 .category-list-form ul li span {
@@ -258,7 +255,7 @@ h1 {
 
 .delete:hover {
     background-color: transparent;
-    color: #000;
+    color: red;
 }
 
 .addImg {
