--- a/public/css/secheader.css
+++ b/public/css/secheader.css
@@ -50,3 +50,16 @@
      position: relative;
 
  }
+
+ .navbar-k a {
+     text-decoration: none;
+     color: black;
+ }
+
+ .sticky-nav {
+    position: fixed;
+    top: 0;
+    background-color: #fff;
+    z-index: 100;
+    width: 100%;
+ }
